--- a/study/prepare_interview1/ML_Foundation.tex
+++ b/study/prepare_interview1/ML_Foundation.tex
@@ -54,6 +54,7 @@
 \newcommand{\mypois}[1]{\operatorname{Pois}(#1)}
 
 \newcommand{\myber}[1]{\operatorname{Bern}\!\left(#1\right)}
+\newcommand{\Mult}[1]{\operatorname{Mult}\!\left(#1\right)}
 \newcommand{\mybin}[2]{\operatorname{Bin}\!\left(#1,#2\right)}
 \newcommand{\mytoinf}[1]{#1 \rightarrow \infty}
 \newcommand{\myexp}[1]{\exp{\left(#1\right)}}
@@ -69,8 +70,10 @@
 \newcommand{\Span}[1]{\operatorname{Span}\!\left(#1\right)}
 \newcommand{\argmax}[1]{\operatorname{arg max}_{#1}}
 \newcommand{\argmin}[1]{\operatorname{arg min}_{#1}}
-\newcommand{\nll}[1]{\operatorname{NLL}\!\left(#1\right)}
+\newcommand{\NLL}[1]{\operatorname{NLL}\!\left(#1\right)}
 \newcommand{\rss}[1]{\operatorname{RSS}\!\left(#1\right)}
+\newcommand{\Softmax}[1]{\operatorname{Softmax}\!\left(#1\right)}
+
 
 % 발표 제목, 저자, 날짜 설정
 \title{ML Foundation}
@@ -105,12 +108,60 @@
 \end{frame}
 
 \begin{frame}{.}
-  $\nll{w, \beta} = n \log{\sqrt{2\pi}\sigma} + \sum_{i=1}^n \frac{(y_i - w^\top x_i - \beta)^2}{2\sigma^2}$ and since $\nll{w, \beta}$ is \ti{convex function} for $w, \beta$, $w^\ast, \beta^\ast := \argmin{w, \beta} \nll{w, \beta}$ satisfies $\nabla \nll{w^\ast, \beta^\ast} = 0$.
+  $\NLL{w, \beta} = n \log{\sqrt{2\pi}\sigma} + \sum_{i=1}^n \frac{(y_i - w^\top x_i - \beta)^2}{2\sigma^2}$ and since $\NLL{w, \beta}$ is \ti{convex function} for $w, \beta$, $w^\ast, \beta^\ast := \argmin{w, \beta} \NLL{w, \beta}$ satisfies $\nabla \NLL{w^\ast, \beta^\ast} = 0$.
 
   In this case $\nabla_{w, \beta} \rss{w^\ast, \beta^\ast} = 0$ where $\rss{w, \beta} = \frac{1}{2}\sum_{i=1}^n (y_i - w^\top x_i - \beta)^2$.
 
   \bigskip
   Let $\forall j, 1 \leq j \leq n, Y_j = y_j \leq n$ and $X_{ij} = x_i, \forall 1 \leq i\leq n, \forall 1 \leq j \leq d$ and $X_{*(d+1)} = \mb{1}$ (so, $Y \in \mbb{R}^{n}$ and $X \in \mbb{R}^{n \times (d+1)}$). Let $\bar{w} = \left[\begin{matrix} w_1 \\ \vdots \\ w_d \\ \beta  \end{matrix}\right]$ Then we can write $\rss{\bar{w}} = \frac{1}{2} (X\bar{w} - Y)^\top (X\bar{w} - Y) =\frac{1}{2}\abs{X\bar{w} - Y}^2_2, \nabla_{\bar{w}}\rss{\bar{w}} = \sum_{i=1}^n (X_{i*} \bar{w} - Y_i) X_{i*}$
 \end{frame}
+
+\subsection{Maximum Likelihood Estimation(MLE)}
+
+\begin{frame}{.}
+  MLE is defined by
+  \[
+    \theta^\ast = \argmax{\theta} P(\mc{D}|\theta) = \argmax{\theta} \Pi_{n=1}^N P(y_n| x_n; \theta) (\text{i.i.d. assumption})
+  \]
+  Find $\theta^\ast = \argmax{\theta} P(\mc{D}|\theta)$ is same with finding $\theta^\ast = \argmax{\theta} \log{P(\mc{D}|\theta)} = \argmax{\theta} \sum_{n=1}^N \log{P(y_n|x_n; \theta)}$.
+
+  Or $\theta^\ast = \argmin{\theta} \NLL{\theta} = - \sum_{n=1}^N \log{P(y_n|x_n;\theta)}$.
+\end{frame}
+
+\begin{frame}{.}
+  \begin{block}{Multinomial Logistic Regression}
+    \href{https://hcnoh.github.io/2019-06-03-cross-entropy}{https://hcnoh.github.io/2019-06-03-cross-entropy}
+    \smallskip
+
+    Suppose there exists dataset $\mc{D} = \{(x_n,y_n)| 1\leq n \leq N\}$ where $y_n \in \{1, \dots, C\}$.
+
+    We want to train multinomial classification problem with function that can be parametrized by $\theta$. 
+    In this setting, we will predict class of $x_n$ as $i$ using probability obtained by $P_\theta (\hat{Y}_n = i|x_n)$. 
+    In other words, with probability of $P_\theta (\hat{Y}_n = i |x_n)$, class of $x_n$ is predicted as $i$.
+
+    \smallskip
+    Then $\mc{L}((x,y)) = \Pi_{i=1}^C P_\theta(\hat{Y}=i|x)^{\delta_{iy}}$ is the likelihood for dataset $(x,y)$ ($\delta$ is kroneker-delta).
+    For $\mc{D}$, likelihood is defined by $\mc{L}(\mc{D}) = \Pi_{n=1}^N \Pi_{i=1}^C P_\theta(\hat{Y}=i|x_n)^{\delta_{iy_n}}$. NLL is defined by $\NLL{\mc{D};\theta} = \sum_{n=1}^N \sum_{i=1}^C \delta_{i y_n} \log{P_\theta (\hat{Y}=i | x_n)}$.
+
+    \smallskip
+    Now, $\sum_{i=1}^C \delta_{i y_n} \log{P_\theta(\hat{Y}=i| x_n)}$ is shown to be equal to $\mc{H}( P_D(Y|x), P_\theta(\hat{Y}|x))$. First, In $\mc{D}$, there exists unique $y$ for input $x$. Thus, $\delta_{iy_n} = P_D(Y=i|x)$. Then $\NLL{\mc{D};\theta} = \sum_{n=1}^N \sum_{i=1}^C P_D(Y=i| x_n) \log{P_\theta (\hat{Y}=i|x_n)} = \sum_{n=1}^N\mc{H}(P_D(Y|x_n), P_\theta (\hat{Y}|x_n))$.
+
+    \bigskip
+    Thus for multinomial classification task, NLL is cross-entropy between true distribution $(P_D(Y|x_n))$ and predict distribution $(P_\theta(Y|x_n))$.
+
+  \end{block}
+\end{frame}
+
+\begin{frame}{.}
+  \begin{block}{Why use CE loss for classification instead of MSE?}
+    \begin{itemize}
+      \item It is natural to use  Cross Entropy Loss because it maximizes likelihood.
+      \item Gradient Saturation Problem.
+      Let $z$ be logit which is input for softmax and $\hat{y}$ be probability for each category obtained by $\hat{y} = \Softmax{z}$. In case of cross entropy loss, by chain-rule, we get \[\frac{\partial L}{\partial z_j} = \sum_{i=1}^C \frac{\partial L}{\partial y_i}\frac{\partial y_i}{\partial \hat{y}_i}\frac{\partial \hat{y}_i}{\partial z_j} = \frac{1}{N}\sum_{i=1}^C \frac{-y_i}{\hat{y}_i} (-\hat{y}_i \hat{y}_j + \delta_{ij} \hat{y}_i) = \frac{1}{N} \left[-y_i + \sum_{i=1}^C y_i y_j\right]\]
+    \end{itemize}
+  
+  \end{block}
+\end{frame}
+
 
 \end{document}
